crates/agent-tui/tests/snapshots/render_snapshots__approval_dialog_narrow_memoizable.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"approval_dialog_narrow_memoizable\", &s, NARROW, H)"
---

PYXIS
your terminal coding agent

◆ gpt-5  ·  pyxis  ·  Ask for approval
○ not connected  restart pyxis to reconn

/help  ·  /models  ·  /effort
/permissions  ·  /goal
? for shortcuts   ·   ↑ history










⟐ bash  - sensitive action requires
       git status
  [o] allow   [n] deny
  [a] allow session   [d] deny session
