crates/agent-tui/tests/snapshots/render_snapshots__approval_dialog_narrow_not_memoizable.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"approval_dialog_narrow_not_memoizable\", &s, NARROW, H)"
---

 ╭───────────────────────────────────╮
 │                                   │
 │  PYXIS                            │
 │  your terminal coding agent       │
 │                                   │
 │  ◆ gpt-5  ·  pyxis                │
 │    Ask for approval               │
 │  ○ not connected                  │
 │    restart pyxis to reconnect     │
 │                                   │
 │  /help  ·  /models  ·  /effort    │
 │  /permissions  ·  /goal           │
 │  ? for shortcuts   ·   ↑ history  │
 │                                   │
 ╰───────────────────────────────────╯



⟐ bash  - sensitive action requires
       rm $(cat liste)
  not remembered: the command contains a
  substitution or a variable
  [o] allow   [n] deny
