crates/agent-tui/tests/snapshots/render_snapshots__code_mode_cell_states.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"code_mode_cell_states\", &s, W, H)"
---
› Compte les crates du workspace

● exec
  ⎿ Script running with cell ID cell_1. Call `wait` with this cell_id to resume.
● wait
  ⎿ Cell cell_1 completed.
● exec
  ⎿ Cell cell_2 failed.
  ⎿ Error: script_error: Error: boom











────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
