crates/agent-tui/tests/snapshots/render_snapshots__command_menu_filtered.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"command_menu_filtered\", &s, W, H)"
---

    ╭──────────────────────────────────────────────────────────────────────╮
    │                                                                      │
    │                         PYXIS                                        │
    │                         your terminal coding agent                   │
    │   ⢄⢵⣴⢵⢤⢄⣄   ⢀⢀⠴⠕⠷⢿⢅⠁                                                 │
    │   ⠑⢿⠅⠁ ⠁⠁⠉⠵⠷⢍⠁  ⢀⠝⠅     ◆ gpt-5  ·  pyxis  ·  Ask for approval       │
    │    ⠉⠵⢅ ⢠ ⢕⢵⢕⠅⠙⢵⢴⠏⠁      ○ not connected  restart pyxis to reconnect  │
    │      ⢽⠟⠅ ⠙⠝⠟⢅⠕⠍⠁⠑⢅⠄                                                  │
    │    ⢀⣽⠁   ⢁⠤⢟⣅    ⢙⣷⠅    /help  ·  /models  ·  /effort                │
    │    ⠝⢷⠵⠴⠗⠉⠁  ⠁⠉⠙⠓⠗⠟⠝⠁    /permissions  ·  /goal                       │
    │    ⠁ ⠁                  ? for shortcuts   ·   ↑ history              │
    │                                                                      │
    │                                                                      │
    ╰──────────────────────────────────────────────────────────────────────╯


› /resume   Resume a past conversation
  /rewind   Branch at an earlier turn (/rewind <turn-id>) without touching this…
  ↑↓ navigate · enter run · tab complete · esc cancel
────────────────────────────────────────────────────────────────────────────────
› /re
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
