crates/agent-tui/tests/snapshots/render_snapshots__composer_large_paste.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"composer_large_paste\", &s, W, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.














────────────────────────────────────────────────────────────────────────────────
› [collage : 847 lignes] corrige la cause
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
