crates/agent-tui/tests/snapshots/render_snapshots__composer_scrolled.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"composer_scrolled\", &s, W, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.





────────────────────────────────────────────────────────────────────────────────
  paragraphe 11
  paragraphe 12
  paragraphe 13
  paragraphe 14
  paragraphe 15
  paragraphe 16
  paragraphe 17
  paragraphe 18
  paragraphe 19
  paragraphe 20
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
