crates/agent-tui/tests/snapshots/render_snapshots__composer_short_terminal.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"composer_short_terminal\", &s, W, 8)"
---
  Elle rend la main à chaque frontière.
────────────────────────────────────────────────────────────────────────────────
  ligne 9
  ligne 10
  ligne 11
  ligne 12
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
