crates/agent-tui/tests/snapshots/render_snapshots__composer_wrapped_line.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"composer_wrapped_line\", &s, NARROW, H)"
---
› Explique la boucle d'agent et montre
  le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.










────────────────────────────────────────
› Analyse la boucle d'agent, la
  frontiere d'annulation cooperative et
  la reconciliation du transcript, puis
  propose un plan de test.
────────────────────────────────────────
  gpt-5 · pyxis
